parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    BOOLEAN
    ENDL
    FALSE
    FOR
    MEAN
    MODE
    NON_EQUAL
    PLOTXY
    TO
    TRUE
    VARY

Grammar

Rule 0     S' -> program
Rule 1     program -> PROGRAM ID SEMICOLON pVars gtm fun mein
Rule 2     gtm -> <empty>
Rule 3     pVars -> vars
Rule 4     pVars -> empty
Rule 5     vars -> VAR COLON vars2
Rule 6     vars2 -> vare COLON type def SEMICOLON vars3
Rule 7     vars3 -> vars2
Rule 8     vars3 -> empty
Rule 9     type -> INT
Rule 10    type -> FLOAT
Rule 11    type -> CHAR
Rule 12    def -> <empty>
Rule 13    vare -> ID ar
Rule 14    ar -> L_SQ siz R_SQ
Rule 15    ar -> empty
Rule 16    siz -> CTEI mat
Rule 17    mat -> DOT CTEI
Rule 18    mat -> empty
Rule 19    fun -> Fun fuc
Rule 20    fun -> empty
Rule 21    fuc -> fun
Rule 22    Fun -> FUNC Ftype ID mst L_PAR param paran R_PAR SEMICOLON pVars bloq endfun
Rule 23    Ftype -> type
Rule 24    Ftype -> VOID
Rule 25    mst -> <empty>
Rule 26    param -> ID COLON type xparam
Rule 27    param -> empty
Rule 28    xparam -> COMMA ID COLON type xparam
Rule 29    xparam -> empty
Rule 30    paran -> <empty>
Rule 31    endfun -> <empty>
Rule 32    mein -> MAIN pmain L_PAR R_PAR bloq
Rule 33    pmain -> <empty>
Rule 34    bloq -> L_COR statbloq R_COR
Rule 35    statbloq -> estatuto statbloq
Rule 36    statbloq -> empty
Rule 37    estatuto -> cond
Rule 38    estatuto -> whil
Rule 39    estatuto -> prin
Rule 40    estatuto -> asign
Rule 41    estatuto -> mcall
Rule 42    estatuto -> read
Rule 43    estatuto -> ret
Rule 44    mcall -> Mcall SEMICOLON
Rule 45    Mcall -> ID chkmod L_PAR era cparam parck R_PAR
Rule 46    chkmod -> <empty>
Rule 47    era -> <empty>
Rule 48    cparam -> expres cxparam
Rule 49    cparam -> empty
Rule 50    cxparam -> COMMA expres cxparam
Rule 51    cxparam -> empty
Rule 52    parck -> <empty>
Rule 53    cond -> IF L_PAR expres conval R_PAR THEN bloq condex conf SEMICOLON
Rule 54    conval -> <empty>
Rule 55    conf -> <empty>
Rule 56    condex -> ELSE jum bloq
Rule 57    condex -> empty
Rule 58    jum -> <empty>
Rule 59    whil -> WHILE L_PAR wju expres conval R_PAR DO bloq back
Rule 60    wju -> <empty>
Rule 61    back -> <empty>
Rule 62    prin -> PRINT L_PAR str ptr R_PAR SEMICOLON
Rule 63    ptr -> COMMA str ptr
Rule 64    ptr -> empty
Rule 65    str -> expres
Rule 66    str -> CTES
Rule 67    read -> READ COLON variable SEMICOLON
Rule 68    asign -> variable ASSIGN expres SEMICOLON
Rule 69    variable -> ID ch arr va
Rule 70    arr -> L_SQ dim R_SQ
Rule 71    arr -> empty
Rule 72    dim -> expres mar
Rule 73    mar -> DOT expres
Rule 74    mar -> empty
Rule 75    expres -> contr c
Rule 76    c -> con contr c
Rule 77    c -> empty
Rule 78    con -> AND
Rule 79    con -> OR
Rule 80    contr -> exp cn
Rule 81    cn -> cont exp cn
Rule 82    cn -> empty
Rule 83    cont -> EQUALS
Rule 84    cont -> EQUAL_MAJOR
Rule 85    cont -> EQUAL_MINOR
Rule 86    cont -> LESS_THAN
Rule 87    cont -> MORE_THAN
Rule 88    cont -> NOT
Rule 89    exp -> term t
Rule 90    t -> opt term t
Rule 91    t -> empty
Rule 92    Un -> ADD
Rule 93    Un -> DEC
Rule 94    opt -> PLUS
Rule 95    opt -> MINUS
Rule 96    term -> fact f
Rule 97    f -> fopt fact f
Rule 98    f -> empty
Rule 99    fopt -> MULT
Rule 100   fopt -> DIV
Rule 101   fact -> L_PAR expres R_PAR
Rule 102   fact -> sign varcte
Rule 103   sign -> opt
Rule 104   sign -> Un
Rule 105   sign -> empty
Rule 106   varcte -> ID ch arr va
Rule 107   varcte -> CTEC apC
Rule 108   varcte -> CTES apS
Rule 109   varcte -> CTEI apI
Rule 110   varcte -> CTEF apF
Rule 111   varcte -> Mcall call
Rule 112   call -> <empty>
Rule 113   ch -> <empty>
Rule 114   va -> <empty>
Rule 115   apC -> <empty>
Rule 116   apS -> <empty>
Rule 117   apI -> <empty>
Rule 118   apF -> <empty>
Rule 119   ret -> RETURN expres SEMICOLON
Rule 120   empty -> <empty>

Terminals, with rules where they appear

ADD                  : 92
AND                  : 78
ASSIGN               : 68
BOOLEAN              : 
CHAR                 : 11
COLON                : 5 6 26 28 67
COMMA                : 28 50 63
CTEC                 : 107
CTEF                 : 110
CTEI                 : 16 17 109
CTES                 : 66 108
DEC                  : 93
DIV                  : 100
DO                   : 59
DOT                  : 17 73
ELSE                 : 56
ENDL                 : 
EQUALS               : 83
EQUAL_MAJOR          : 84
EQUAL_MINOR          : 85
FALSE                : 
FLOAT                : 10
FOR                  : 
FUNC                 : 22
ID                   : 1 13 22 26 28 45 69 106
IF                   : 53
INT                  : 9
LESS_THAN            : 86
L_COR                : 34
L_PAR                : 22 32 45 53 59 62 101
L_SQ                 : 14 70
MAIN                 : 32
MEAN                 : 
MINUS                : 95
MODE                 : 
MORE_THAN            : 87
MULT                 : 99
NON_EQUAL            : 
NOT                  : 88
OR                   : 79
PLOTXY               : 
PLUS                 : 94
PRINT                : 62
PROGRAM              : 1
READ                 : 67
RETURN               : 119
R_COR                : 34
R_PAR                : 22 32 45 53 59 62 101
R_SQ                 : 14 70
SEMICOLON            : 1 6 22 44 53 62 67 68 119
THEN                 : 53
TO                   : 
TRUE                 : 
VAR                  : 5
VARY                 : 
VOID                 : 24
WHILE                : 59
error                : 

Nonterminals, with rules where they appear

Ftype                : 22
Fun                  : 19
Mcall                : 44 111
Un                   : 104
apC                  : 107
apF                  : 110
apI                  : 109
apS                  : 108
ar                   : 13
arr                  : 69 106
asign                : 40
back                 : 59
bloq                 : 22 32 53 56 59
c                    : 75 76
call                 : 111
ch                   : 69 106
chkmod               : 45
cn                   : 80 81
con                  : 76
cond                 : 37
condex               : 53
conf                 : 53
cont                 : 81
contr                : 75 76
conval               : 53 59
cparam               : 45
cxparam              : 48 50
def                  : 6
dim                  : 70
empty                : 4 8 15 18 20 27 29 36 49 51 57 64 71 74 77 82 91 98 105
endfun               : 22
era                  : 45
estatuto             : 35
exp                  : 80 81
expres               : 48 50 53 59 65 68 72 73 101 119
f                    : 96 97
fact                 : 96 97
fopt                 : 97
fuc                  : 19
fun                  : 1 21
gtm                  : 1
jum                  : 56
mar                  : 72
mat                  : 16
mcall                : 41
mein                 : 1
mst                  : 22
opt                  : 90 103
pVars                : 1 22
param                : 22
paran                : 22
parck                : 45
pmain                : 32
prin                 : 39
program              : 0
ptr                  : 62 63
read                 : 42
ret                  : 43
sign                 : 102
siz                  : 14
statbloq             : 34 35
str                  : 62 63
t                    : 89 90
term                 : 89 90
type                 : 6 23 26 28
va                   : 69 106
varcte               : 102
vare                 : 6
variable             : 67 68
vars                 : 3
vars2                : 5 7
vars3                : 6
whil                 : 38
wju                  : 59
xparam               : 26 28

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . PROGRAM ID SEMICOLON pVars gtm fun mein

    PROGRAM         shift and go to state 2

    program                        shift and go to state 1

state 1

    (0) S' -> program .



state 2

    (1) program -> PROGRAM . ID SEMICOLON pVars gtm fun mein

    ID              shift and go to state 3


state 3

    (1) program -> PROGRAM ID . SEMICOLON pVars gtm fun mein

    SEMICOLON       shift and go to state 4


state 4

    (1) program -> PROGRAM ID SEMICOLON . pVars gtm fun mein
    (3) pVars -> . vars
    (4) pVars -> . empty
    (5) vars -> . VAR COLON vars2
    (120) empty -> .

    VAR             shift and go to state 8
    FUNC            reduce using rule 120 (empty -> .)
    MAIN            reduce using rule 120 (empty -> .)

    pVars                          shift and go to state 5
    vars                           shift and go to state 6
    empty                          shift and go to state 7

state 5

    (1) program -> PROGRAM ID SEMICOLON pVars . gtm fun mein
    (2) gtm -> .

    FUNC            reduce using rule 2 (gtm -> .)
    MAIN            reduce using rule 2 (gtm -> .)

    gtm                            shift and go to state 9

state 6

    (3) pVars -> vars .

    FUNC            reduce using rule 3 (pVars -> vars .)
    MAIN            reduce using rule 3 (pVars -> vars .)
    L_COR           reduce using rule 3 (pVars -> vars .)


state 7

    (4) pVars -> empty .

    FUNC            reduce using rule 4 (pVars -> empty .)
    MAIN            reduce using rule 4 (pVars -> empty .)
    L_COR           reduce using rule 4 (pVars -> empty .)


state 8

    (5) vars -> VAR . COLON vars2

    COLON           shift and go to state 10


state 9

    (1) program -> PROGRAM ID SEMICOLON pVars gtm . fun mein
    (19) fun -> . Fun fuc
    (20) fun -> . empty
    (22) Fun -> . FUNC Ftype ID mst L_PAR param paran R_PAR SEMICOLON pVars bloq endfun
    (120) empty -> .

    FUNC            shift and go to state 14
    MAIN            reduce using rule 120 (empty -> .)

    fun                            shift and go to state 11
    Fun                            shift and go to state 12
    empty                          shift and go to state 13

state 10

    (5) vars -> VAR COLON . vars2
    (6) vars2 -> . vare COLON type def SEMICOLON vars3
    (13) vare -> . ID ar

    ID              shift and go to state 17

    vars2                          shift and go to state 15
    vare                           shift and go to state 16

state 11

    (1) program -> PROGRAM ID SEMICOLON pVars gtm fun . mein
    (32) mein -> . MAIN pmain L_PAR R_PAR bloq

    MAIN            shift and go to state 19

    mein                           shift and go to state 18

state 12

    (19) fun -> Fun . fuc
    (21) fuc -> . fun
    (19) fun -> . Fun fuc
    (20) fun -> . empty
    (22) Fun -> . FUNC Ftype ID mst L_PAR param paran R_PAR SEMICOLON pVars bloq endfun
    (120) empty -> .

    FUNC            shift and go to state 14
    MAIN            reduce using rule 120 (empty -> .)

    Fun                            shift and go to state 12
    fuc                            shift and go to state 20
    fun                            shift and go to state 21
    empty                          shift and go to state 13

state 13

    (20) fun -> empty .

    MAIN            reduce using rule 20 (fun -> empty .)


state 14

    (22) Fun -> FUNC . Ftype ID mst L_PAR param paran R_PAR SEMICOLON pVars bloq endfun
    (23) Ftype -> . type
    (24) Ftype -> . VOID
    (9) type -> . INT
    (10) type -> . FLOAT
    (11) type -> . CHAR

    VOID            shift and go to state 24
    INT             shift and go to state 25
    FLOAT           shift and go to state 26
    CHAR            shift and go to state 27

    Ftype                          shift and go to state 22
    type                           shift and go to state 23

state 15

    (5) vars -> VAR COLON vars2 .

    FUNC            reduce using rule 5 (vars -> VAR COLON vars2 .)
    MAIN            reduce using rule 5 (vars -> VAR COLON vars2 .)
    L_COR           reduce using rule 5 (vars -> VAR COLON vars2 .)


state 16

    (6) vars2 -> vare . COLON type def SEMICOLON vars3

    COLON           shift and go to state 28


state 17

    (13) vare -> ID . ar
    (14) ar -> . L_SQ siz R_SQ
    (15) ar -> . empty
    (120) empty -> .

    L_SQ            shift and go to state 30
    COLON           reduce using rule 120 (empty -> .)

    ar                             shift and go to state 29
    empty                          shift and go to state 31

state 18

    (1) program -> PROGRAM ID SEMICOLON pVars gtm fun mein .

    $end            reduce using rule 1 (program -> PROGRAM ID SEMICOLON pVars gtm fun mein .)


state 19

    (32) mein -> MAIN . pmain L_PAR R_PAR bloq
    (33) pmain -> .

    L_PAR           reduce using rule 33 (pmain -> .)

    pmain                          shift and go to state 32

state 20

    (19) fun -> Fun fuc .

    MAIN            reduce using rule 19 (fun -> Fun fuc .)


state 21

    (21) fuc -> fun .

    MAIN            reduce using rule 21 (fuc -> fun .)


state 22

    (22) Fun -> FUNC Ftype . ID mst L_PAR param paran R_PAR SEMICOLON pVars bloq endfun

    ID              shift and go to state 33


state 23

    (23) Ftype -> type .

    ID              reduce using rule 23 (Ftype -> type .)


state 24

    (24) Ftype -> VOID .

    ID              reduce using rule 24 (Ftype -> VOID .)


state 25

    (9) type -> INT .

    ID              reduce using rule 9 (type -> INT .)
    SEMICOLON       reduce using rule 9 (type -> INT .)
    COMMA           reduce using rule 9 (type -> INT .)
    R_PAR           reduce using rule 9 (type -> INT .)


state 26

    (10) type -> FLOAT .

    ID              reduce using rule 10 (type -> FLOAT .)
    SEMICOLON       reduce using rule 10 (type -> FLOAT .)
    COMMA           reduce using rule 10 (type -> FLOAT .)
    R_PAR           reduce using rule 10 (type -> FLOAT .)


state 27

    (11) type -> CHAR .

    ID              reduce using rule 11 (type -> CHAR .)
    SEMICOLON       reduce using rule 11 (type -> CHAR .)
    COMMA           reduce using rule 11 (type -> CHAR .)
    R_PAR           reduce using rule 11 (type -> CHAR .)


state 28

    (6) vars2 -> vare COLON . type def SEMICOLON vars3
    (9) type -> . INT
    (10) type -> . FLOAT
    (11) type -> . CHAR

    INT             shift and go to state 25
    FLOAT           shift and go to state 26
    CHAR            shift and go to state 27

    type                           shift and go to state 34

state 29

    (13) vare -> ID ar .

    COLON           reduce using rule 13 (vare -> ID ar .)


state 30

    (14) ar -> L_SQ . siz R_SQ
    (16) siz -> . CTEI mat

    CTEI            shift and go to state 36

    siz                            shift and go to state 35

state 31

    (15) ar -> empty .

    COLON           reduce using rule 15 (ar -> empty .)


state 32

    (32) mein -> MAIN pmain . L_PAR R_PAR bloq

    L_PAR           shift and go to state 37


state 33

    (22) Fun -> FUNC Ftype ID . mst L_PAR param paran R_PAR SEMICOLON pVars bloq endfun
    (25) mst -> .

    L_PAR           reduce using rule 25 (mst -> .)

    mst                            shift and go to state 38

state 34

    (6) vars2 -> vare COLON type . def SEMICOLON vars3
    (12) def -> .

    SEMICOLON       reduce using rule 12 (def -> .)

    def                            shift and go to state 39

state 35

    (14) ar -> L_SQ siz . R_SQ

    R_SQ            shift and go to state 40


state 36

    (16) siz -> CTEI . mat
    (17) mat -> . DOT CTEI
    (18) mat -> . empty
    (120) empty -> .

    DOT             shift and go to state 42
    R_SQ            reduce using rule 120 (empty -> .)

    mat                            shift and go to state 41
    empty                          shift and go to state 43

state 37

    (32) mein -> MAIN pmain L_PAR . R_PAR bloq

    R_PAR           shift and go to state 44


state 38

    (22) Fun -> FUNC Ftype ID mst . L_PAR param paran R_PAR SEMICOLON pVars bloq endfun

    L_PAR           shift and go to state 45


state 39

    (6) vars2 -> vare COLON type def . SEMICOLON vars3

    SEMICOLON       shift and go to state 46


state 40

    (14) ar -> L_SQ siz R_SQ .

    COLON           reduce using rule 14 (ar -> L_SQ siz R_SQ .)


state 41

    (16) siz -> CTEI mat .

    R_SQ            reduce using rule 16 (siz -> CTEI mat .)


state 42

    (17) mat -> DOT . CTEI

    CTEI            shift and go to state 47


state 43

    (18) mat -> empty .

    R_SQ            reduce using rule 18 (mat -> empty .)


state 44

    (32) mein -> MAIN pmain L_PAR R_PAR . bloq
    (34) bloq -> . L_COR statbloq R_COR

    L_COR           shift and go to state 49

    bloq                           shift and go to state 48

state 45

    (22) Fun -> FUNC Ftype ID mst L_PAR . param paran R_PAR SEMICOLON pVars bloq endfun
    (26) param -> . ID COLON type xparam
    (27) param -> . empty
    (120) empty -> .

    ID              shift and go to state 50
    R_PAR           reduce using rule 120 (empty -> .)

    param                          shift and go to state 51
    empty                          shift and go to state 52

state 46

    (6) vars2 -> vare COLON type def SEMICOLON . vars3
    (7) vars3 -> . vars2
    (8) vars3 -> . empty
    (6) vars2 -> . vare COLON type def SEMICOLON vars3
    (120) empty -> .
    (13) vare -> . ID ar

    FUNC            reduce using rule 120 (empty -> .)
    MAIN            reduce using rule 120 (empty -> .)
    L_COR           reduce using rule 120 (empty -> .)
    ID              shift and go to state 17

    vare                           shift and go to state 16
    vars3                          shift and go to state 53
    vars2                          shift and go to state 54
    empty                          shift and go to state 55

state 47

    (17) mat -> DOT CTEI .

    R_SQ            reduce using rule 17 (mat -> DOT CTEI .)


state 48

    (32) mein -> MAIN pmain L_PAR R_PAR bloq .

    $end            reduce using rule 32 (mein -> MAIN pmain L_PAR R_PAR bloq .)


state 49

    (34) bloq -> L_COR . statbloq R_COR
    (35) statbloq -> . estatuto statbloq
    (36) statbloq -> . empty
    (37) estatuto -> . cond
    (38) estatuto -> . whil
    (39) estatuto -> . prin
    (40) estatuto -> . asign
    (41) estatuto -> . mcall
    (42) estatuto -> . read
    (43) estatuto -> . ret
    (120) empty -> .
    (53) cond -> . IF L_PAR expres conval R_PAR THEN bloq condex conf SEMICOLON
    (59) whil -> . WHILE L_PAR wju expres conval R_PAR DO bloq back
    (62) prin -> . PRINT L_PAR str ptr R_PAR SEMICOLON
    (68) asign -> . variable ASSIGN expres SEMICOLON
    (44) mcall -> . Mcall SEMICOLON
    (67) read -> . READ COLON variable SEMICOLON
    (119) ret -> . RETURN expres SEMICOLON
    (69) variable -> . ID ch arr va
    (45) Mcall -> . ID chkmod L_PAR era cparam parck R_PAR

    R_COR           reduce using rule 120 (empty -> .)
    IF              shift and go to state 66
    WHILE           shift and go to state 67
    PRINT           shift and go to state 68
    READ            shift and go to state 71
    RETURN          shift and go to state 72
    ID              shift and go to state 73

    statbloq                       shift and go to state 56
    estatuto                       shift and go to state 57
    empty                          shift and go to state 58
    cond                           shift and go to state 59
    whil                           shift and go to state 60
    prin                           shift and go to state 61
    asign                          shift and go to state 62
    mcall                          shift and go to state 63
    read                           shift and go to state 64
    ret                            shift and go to state 65
    variable                       shift and go to state 69
    Mcall                          shift and go to state 70

state 50

    (26) param -> ID . COLON type xparam

    COLON           shift and go to state 74


state 51

    (22) Fun -> FUNC Ftype ID mst L_PAR param . paran R_PAR SEMICOLON pVars bloq endfun
    (30) paran -> .

    R_PAR           reduce using rule 30 (paran -> .)

    paran                          shift and go to state 75

state 52

    (27) param -> empty .

    R_PAR           reduce using rule 27 (param -> empty .)


state 53

    (6) vars2 -> vare COLON type def SEMICOLON vars3 .

    FUNC            reduce using rule 6 (vars2 -> vare COLON type def SEMICOLON vars3 .)
    MAIN            reduce using rule 6 (vars2 -> vare COLON type def SEMICOLON vars3 .)
    L_COR           reduce using rule 6 (vars2 -> vare COLON type def SEMICOLON vars3 .)


state 54

    (7) vars3 -> vars2 .

    FUNC            reduce using rule 7 (vars3 -> vars2 .)
    MAIN            reduce using rule 7 (vars3 -> vars2 .)
    L_COR           reduce using rule 7 (vars3 -> vars2 .)


state 55

    (8) vars3 -> empty .

    FUNC            reduce using rule 8 (vars3 -> empty .)
    MAIN            reduce using rule 8 (vars3 -> empty .)
    L_COR           reduce using rule 8 (vars3 -> empty .)


state 56

    (34) bloq -> L_COR statbloq . R_COR

    R_COR           shift and go to state 76


state 57

    (35) statbloq -> estatuto . statbloq
    (35) statbloq -> . estatuto statbloq
    (36) statbloq -> . empty
    (37) estatuto -> . cond
    (38) estatuto -> . whil
    (39) estatuto -> . prin
    (40) estatuto -> . asign
    (41) estatuto -> . mcall
    (42) estatuto -> . read
    (43) estatuto -> . ret
    (120) empty -> .
    (53) cond -> . IF L_PAR expres conval R_PAR THEN bloq condex conf SEMICOLON
    (59) whil -> . WHILE L_PAR wju expres conval R_PAR DO bloq back
    (62) prin -> . PRINT L_PAR str ptr R_PAR SEMICOLON
    (68) asign -> . variable ASSIGN expres SEMICOLON
    (44) mcall -> . Mcall SEMICOLON
    (67) read -> . READ COLON variable SEMICOLON
    (119) ret -> . RETURN expres SEMICOLON
    (69) variable -> . ID ch arr va
    (45) Mcall -> . ID chkmod L_PAR era cparam parck R_PAR

    R_COR           reduce using rule 120 (empty -> .)
    IF              shift and go to state 66
    WHILE           shift and go to state 67
    PRINT           shift and go to state 68
    READ            shift and go to state 71
    RETURN          shift and go to state 72
    ID              shift and go to state 73

    estatuto                       shift and go to state 57
    statbloq                       shift and go to state 77
    empty                          shift and go to state 58
    cond                           shift and go to state 59
    whil                           shift and go to state 60
    prin                           shift and go to state 61
    asign                          shift and go to state 62
    mcall                          shift and go to state 63
    read                           shift and go to state 64
    ret                            shift and go to state 65
    variable                       shift and go to state 69
    Mcall                          shift and go to state 70

state 58

    (36) statbloq -> empty .

    R_COR           reduce using rule 36 (statbloq -> empty .)


state 59

    (37) estatuto -> cond .

    IF              reduce using rule 37 (estatuto -> cond .)
    WHILE           reduce using rule 37 (estatuto -> cond .)
    PRINT           reduce using rule 37 (estatuto -> cond .)
    READ            reduce using rule 37 (estatuto -> cond .)
    RETURN          reduce using rule 37 (estatuto -> cond .)
    ID              reduce using rule 37 (estatuto -> cond .)
    R_COR           reduce using rule 37 (estatuto -> cond .)


state 60

    (38) estatuto -> whil .

    IF              reduce using rule 38 (estatuto -> whil .)
    WHILE           reduce using rule 38 (estatuto -> whil .)
    PRINT           reduce using rule 38 (estatuto -> whil .)
    READ            reduce using rule 38 (estatuto -> whil .)
    RETURN          reduce using rule 38 (estatuto -> whil .)
    ID              reduce using rule 38 (estatuto -> whil .)
    R_COR           reduce using rule 38 (estatuto -> whil .)


state 61

    (39) estatuto -> prin .

    IF              reduce using rule 39 (estatuto -> prin .)
    WHILE           reduce using rule 39 (estatuto -> prin .)
    PRINT           reduce using rule 39 (estatuto -> prin .)
    READ            reduce using rule 39 (estatuto -> prin .)
    RETURN          reduce using rule 39 (estatuto -> prin .)
    ID              reduce using rule 39 (estatuto -> prin .)
    R_COR           reduce using rule 39 (estatuto -> prin .)


state 62

    (40) estatuto -> asign .

    IF              reduce using rule 40 (estatuto -> asign .)
    WHILE           reduce using rule 40 (estatuto -> asign .)
    PRINT           reduce using rule 40 (estatuto -> asign .)
    READ            reduce using rule 40 (estatuto -> asign .)
    RETURN          reduce using rule 40 (estatuto -> asign .)
    ID              reduce using rule 40 (estatuto -> asign .)
    R_COR           reduce using rule 40 (estatuto -> asign .)


state 63

    (41) estatuto -> mcall .

    IF              reduce using rule 41 (estatuto -> mcall .)
    WHILE           reduce using rule 41 (estatuto -> mcall .)
    PRINT           reduce using rule 41 (estatuto -> mcall .)
    READ            reduce using rule 41 (estatuto -> mcall .)
    RETURN          reduce using rule 41 (estatuto -> mcall .)
    ID              reduce using rule 41 (estatuto -> mcall .)
    R_COR           reduce using rule 41 (estatuto -> mcall .)


state 64

    (42) estatuto -> read .

    IF              reduce using rule 42 (estatuto -> read .)
    WHILE           reduce using rule 42 (estatuto -> read .)
    PRINT           reduce using rule 42 (estatuto -> read .)
    READ            reduce using rule 42 (estatuto -> read .)
    RETURN          reduce using rule 42 (estatuto -> read .)
    ID              reduce using rule 42 (estatuto -> read .)
    R_COR           reduce using rule 42 (estatuto -> read .)


state 65

    (43) estatuto -> ret .

    IF              reduce using rule 43 (estatuto -> ret .)
    WHILE           reduce using rule 43 (estatuto -> ret .)
    PRINT           reduce using rule 43 (estatuto -> ret .)
    READ            reduce using rule 43 (estatuto -> ret .)
    RETURN          reduce using rule 43 (estatuto -> ret .)
    ID              reduce using rule 43 (estatuto -> ret .)
    R_COR           reduce using rule 43 (estatuto -> ret .)


state 66

    (53) cond -> IF . L_PAR expres conval R_PAR THEN bloq condex conf SEMICOLON

    L_PAR           shift and go to state 78


state 67

    (59) whil -> WHILE . L_PAR wju expres conval R_PAR DO bloq back

    L_PAR           shift and go to state 79


state 68

    (62) prin -> PRINT . L_PAR str ptr R_PAR SEMICOLON

    L_PAR           shift and go to state 80


state 69

    (68) asign -> variable . ASSIGN expres SEMICOLON

    ASSIGN          shift and go to state 81


state 70

    (44) mcall -> Mcall . SEMICOLON

    SEMICOLON       shift and go to state 82


state 71

    (67) read -> READ . COLON variable SEMICOLON

    COLON           shift and go to state 83


state 72

    (119) ret -> RETURN . expres SEMICOLON
    (75) expres -> . contr c
    (80) contr -> . exp cn
    (89) exp -> . term t
    (96) term -> . fact f
    (101) fact -> . L_PAR expres R_PAR
    (102) fact -> . sign varcte
    (103) sign -> . opt
    (104) sign -> . Un
    (105) sign -> . empty
    (94) opt -> . PLUS
    (95) opt -> . MINUS
    (92) Un -> . ADD
    (93) Un -> . DEC
    (120) empty -> .

    L_PAR           shift and go to state 89
    PLUS            shift and go to state 94
    MINUS           shift and go to state 95
    ADD             shift and go to state 96
    DEC             shift and go to state 97
    ID              reduce using rule 120 (empty -> .)
    CTEC            reduce using rule 120 (empty -> .)
    CTES            reduce using rule 120 (empty -> .)
    CTEI            reduce using rule 120 (empty -> .)
    CTEF            reduce using rule 120 (empty -> .)

    expres                         shift and go to state 84
    contr                          shift and go to state 85
    exp                            shift and go to state 86
    term                           shift and go to state 87
    fact                           shift and go to state 88
    sign                           shift and go to state 90
    opt                            shift and go to state 91
    Un                             shift and go to state 92
    empty                          shift and go to state 93

state 73

    (69) variable -> ID . ch arr va
    (45) Mcall -> ID . chkmod L_PAR era cparam parck R_PAR
    (113) ch -> .
    (46) chkmod -> .

    L_SQ            reduce using rule 113 (ch -> .)
    ASSIGN          reduce using rule 113 (ch -> .)
    L_PAR           reduce using rule 46 (chkmod -> .)

    ch                             shift and go to state 98
    chkmod                         shift and go to state 99

state 74

    (26) param -> ID COLON . type xparam
    (9) type -> . INT
    (10) type -> . FLOAT
    (11) type -> . CHAR

    INT             shift and go to state 25
    FLOAT           shift and go to state 26
    CHAR            shift and go to state 27

    type                           shift and go to state 100

state 75

    (22) Fun -> FUNC Ftype ID mst L_PAR param paran . R_PAR SEMICOLON pVars bloq endfun

    R_PAR           shift and go to state 101


state 76

    (34) bloq -> L_COR statbloq R_COR .

    $end            reduce using rule 34 (bloq -> L_COR statbloq R_COR .)
    FUNC            reduce using rule 34 (bloq -> L_COR statbloq R_COR .)
    MAIN            reduce using rule 34 (bloq -> L_COR statbloq R_COR .)
    ELSE            reduce using rule 34 (bloq -> L_COR statbloq R_COR .)
    SEMICOLON       reduce using rule 34 (bloq -> L_COR statbloq R_COR .)
    IF              reduce using rule 34 (bloq -> L_COR statbloq R_COR .)
    WHILE           reduce using rule 34 (bloq -> L_COR statbloq R_COR .)
    PRINT           reduce using rule 34 (bloq -> L_COR statbloq R_COR .)
    READ            reduce using rule 34 (bloq -> L_COR statbloq R_COR .)
    RETURN          reduce using rule 34 (bloq -> L_COR statbloq R_COR .)
    ID              reduce using rule 34 (bloq -> L_COR statbloq R_COR .)
    R_COR           reduce using rule 34 (bloq -> L_COR statbloq R_COR .)


state 77

    (35) statbloq -> estatuto statbloq .

    R_COR           reduce using rule 35 (statbloq -> estatuto statbloq .)


state 78

    (53) cond -> IF L_PAR . expres conval R_PAR THEN bloq condex conf SEMICOLON
    (75) expres -> . contr c
    (80) contr -> . exp cn
    (89) exp -> . term t
    (96) term -> . fact f
    (101) fact -> . L_PAR expres R_PAR
    (102) fact -> . sign varcte
    (103) sign -> . opt
    (104) sign -> . Un
    (105) sign -> . empty
    (94) opt -> . PLUS
    (95) opt -> . MINUS
    (92) Un -> . ADD
    (93) Un -> . DEC
    (120) empty -> .

    L_PAR           shift and go to state 89
    PLUS            shift and go to state 94
    MINUS           shift and go to state 95
    ADD             shift and go to state 96
    DEC             shift and go to state 97
    ID              reduce using rule 120 (empty -> .)
    CTEC            reduce using rule 120 (empty -> .)
    CTES            reduce using rule 120 (empty -> .)
    CTEI            reduce using rule 120 (empty -> .)
    CTEF            reduce using rule 120 (empty -> .)

    expres                         shift and go to state 102
    contr                          shift and go to state 85
    exp                            shift and go to state 86
    term                           shift and go to state 87
    fact                           shift and go to state 88
    sign                           shift and go to state 90
    opt                            shift and go to state 91
    Un                             shift and go to state 92
    empty                          shift and go to state 93

state 79

    (59) whil -> WHILE L_PAR . wju expres conval R_PAR DO bloq back
    (60) wju -> .

    L_PAR           reduce using rule 60 (wju -> .)
    PLUS            reduce using rule 60 (wju -> .)
    MINUS           reduce using rule 60 (wju -> .)
    ADD             reduce using rule 60 (wju -> .)
    DEC             reduce using rule 60 (wju -> .)
    ID              reduce using rule 60 (wju -> .)
    CTEC            reduce using rule 60 (wju -> .)
    CTES            reduce using rule 60 (wju -> .)
    CTEI            reduce using rule 60 (wju -> .)
    CTEF            reduce using rule 60 (wju -> .)

    wju                            shift and go to state 103

state 80

    (62) prin -> PRINT L_PAR . str ptr R_PAR SEMICOLON
    (65) str -> . expres
    (66) str -> . CTES
    (75) expres -> . contr c
    (80) contr -> . exp cn
    (89) exp -> . term t
    (96) term -> . fact f
    (101) fact -> . L_PAR expres R_PAR
    (102) fact -> . sign varcte
    (103) sign -> . opt
    (104) sign -> . Un
    (105) sign -> . empty
    (94) opt -> . PLUS
    (95) opt -> . MINUS
    (92) Un -> . ADD
    (93) Un -> . DEC
    (120) empty -> .

  ! shift/reduce conflict for CTES resolved as shift
    CTES            shift and go to state 106
    L_PAR           shift and go to state 89
    PLUS            shift and go to state 94
    MINUS           shift and go to state 95
    ADD             shift and go to state 96
    DEC             shift and go to state 97
    ID              reduce using rule 120 (empty -> .)
    CTEC            reduce using rule 120 (empty -> .)
    CTEI            reduce using rule 120 (empty -> .)
    CTEF            reduce using rule 120 (empty -> .)

  ! CTES            [ reduce using rule 120 (empty -> .) ]

    str                            shift and go to state 104
    expres                         shift and go to state 105
    contr                          shift and go to state 85
    exp                            shift and go to state 86
    term                           shift and go to state 87
    fact                           shift and go to state 88
    sign                           shift and go to state 90
    opt                            shift and go to state 91
    Un                             shift and go to state 92
    empty                          shift and go to state 93

state 81

    (68) asign -> variable ASSIGN . expres SEMICOLON
    (75) expres -> . contr c
    (80) contr -> . exp cn
    (89) exp -> . term t
    (96) term -> . fact f
    (101) fact -> . L_PAR expres R_PAR
    (102) fact -> . sign varcte
    (103) sign -> . opt
    (104) sign -> . Un
    (105) sign -> . empty
    (94) opt -> . PLUS
    (95) opt -> . MINUS
    (92) Un -> . ADD
    (93) Un -> . DEC
    (120) empty -> .
